@@ -2,6 +2,8 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 1.56     not yet released
           - show perf bar for percentages too
+          - reports:
+            - fixed creating e-mail reports for availability pages
           - config tool:
             - added object browser
 
